--- a/index.html
+++ b/index.html
@@ -28,5 +28,11 @@
             </form>
         </div>
     </div>
-    </body>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+
+    <script src="script.js"></script>
+
+</body>
 </html>
