--- a/dashboard.html
+++ b/dashboard.html
@@ -16,5 +16,8 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="firebase-config.js"></script> </body>
+    <script src="firebase-config.js"></script>
+    
+    <script src="dashboard-script.js"></script> 
+</body>
 </html>
