--- a/dashboard.html
+++ b/dashboard.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="header-user">
                     <i class="fas fa-bell"></i>
-                    <img src="https://i.pravatar.cc/40" alt="User Avatar" class="user-avatar">
+                    <img src="https://raw.githubusercontent.com/awayedogawa/Nexus-Anggaran/main/assets/avatar.png" alt="User Avatar" class="user-avatar">
                 </div>
             </header>
 
