--- a/penyusunan-rka.html
+++ b/penyusunan-rka.html
@@ -105,5 +105,10 @@
         </main>
     </div>
 
-    </body>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="dashboard-script.js"></script> 
+
+</body>
 </html>
