--- a/penyusunan-rka.html
+++ b/penyusunan-rka.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                     <li class="active"><a href="penyusunan-rka.html"><i class="fas fa-file-alt"></i> Penyusunan RKA</a></li>
-                    <li><a href="#"><i class="fas fa-sitemap"></i> Alur Persetujuan</a></li>
+                    <li><a href="alur-persetujuan.html"><i class="fas fa-sitemap"></i> Alur Persetujuan</a></li>
                     <li><a href="#"><i class="fas fa-chart-line"></i> Monitoring & Realisasi</a></li>
                     <li><a href="#"><i class="fas fa-print"></i> Pelaporan</a></li>
                 </ul>
@@ -108,7 +108,6 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="firebase-config.js"></script>
-    <script src="dashboard-script.js"></script> 
-
+    <script src="dashboard-script.js"></script>
 </body>
 </html>
