--- a/penyusunan-rka.html
+++ b/penyusunan-rka.html
@@ -20,7 +20,7 @@
                     <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
                     <li class="active"><a href="penyusunan-rka.html"><i class="fas fa-file-alt"></i> Penyusunan RKA</a></li>
                     <li><a href="alur-persetujuan.html"><i class="fas fa-sitemap"></i> Alur Persetujuan</a></li>
-                    <li><a href="#"><i class="fas fa-chart-line"></i> Monitoring & Realisasi</a></li>
+                    <li><a href="monitoring-realisasi.html"><i class="fas fa-chart-line"></i> Monitoring & Realisasi</a></li>
                     <li><a href="#"><i class="fas fa-print"></i> Pelaporan</a></li>
                 </ul>
             </nav>
