--- a/alur-persetujuan.html
+++ b/alur-persetujuan.html
@@ -21,7 +21,7 @@
                     <li><a href="penyusunan-rka.html"><i class="fas fa-file-alt"></i> Penyusunan RKA</a></li>
                     <li class="active"><a href="alur-persetujuan.html"><i class="fas fa-sitemap"></i> Alur Persetujuan</a></li>
                     <li><a href="monitoring-realisasi.html"><i class="fas fa-chart-line"></i> Monitoring & Realisasi</a></li>
-                    <li><a href="#"><i class="fas fa-print"></i> Pelaporan</a></li>
+                    <li><a href="pelaporan.html"><i class="fas fa-print"></i> Pelaporan</a></li>
                 </ul>
             </nav>
             <div class="sidebar-footer">
