--- a/monitoring-realisasi.html
+++ b/monitoring-realisasi.html
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
             <div class="sidebar-footer">
-                <a href="#"><i class="fas fa-cog"></i> Pengaturan</a>
+                <a href="pengaturan.html"><i class="fas fa-cog"></i> Pengaturan</a>
                 <button id="logout-button"><i class="fas fa-sign-out-alt"></i> Logout</button>
             </div>
         </aside>
