--- a/penyusunan-rka.html
+++ b/penyusunan-rka.html
@@ -45,7 +45,12 @@
             <div class="content-body">
                 <div class="rka-composer-grid">
                     <div class="rka-structure-panel">
-                        <h4>Struktur Program & Kegiatan</h4>
+                        <div class="panel-header">
+                            <h4>Struktur Program & Kegiatan</h4>
+                            <button id="tambah-program-btn" class="btn btn-outline">
+                                <i class="fas fa-plus"></i> Tambah Program
+                            </button>
+                        </div>
                         <ul class="tree-view">
                             <li class="program">
                                 <span>Program A: Pembangunan Infrastruktur</span>
