--- a/penyusunan-rka.html
+++ b/penyusunan-rka.html
@@ -112,7 +112,6 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="firebase-config.js"></script>
-    <script src="dashboard-script.js"></script>
-</body>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script> <script src="firebase-config.js"></script>
+    <script src="dashboard-script.js"></script> <script src="penyusunan-rka-script.js"></script> </body>
 </html>
