--- a/penyusunan-rka.html
+++ b/penyusunan-rka.html
@@ -11,85 +11,26 @@
 <body>
     <div class="app-container">
         <aside class="sidebar">
-            <div class="sidebar-header">
-                <i class="fas fa-cubes"></i>
-                <span>Nexus Anggaran</span>
-            </div>
-            <nav class="sidebar-nav">
-                <ul>
-                    <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
-                    <li class="active"><a href="penyusunan-rka.html"><i class="fas fa-file-alt"></i> Penyusunan RKA</a></li>
-                    <li><a href="alur-persetujuan.html"><i class="fas fa-sitemap"></i> Alur Persetujuan</a></li>
-                    <li><a href="monitoring-realisasi.html"><i class="fas fa-chart-line"></i> Monitoring & Realisasi</a></li>
-                    <li><a href="pelaporan.html"><i class="fas fa-print"></i> Pelaporan</a></li>
-                </ul>
-            </nav>
-            <div class="sidebar-footer">
-                <a href="pengaturan.html"><i class="fas fa-cog"></i> Pengaturan</a>
-                <button id="logout-button"><i class="fas fa-sign-out-alt"></i> Logout</button>
-            </div>
-        </aside>
+            </aside>
 
         <main class="main-content">
             <header class="main-header">
-                <div class="header-title">
-                    <h2>Penyusunan RKA</h2>
-                    <p>Input dan kelola rincian belanja program & kegiatan.</p>
-                </div>
-                <div class="header-user">
-                    <i class="fas fa-bell"></i>
-                    <img src="https://raw.githubusercontent.com/awayedogawa/Nexus-Anggaran/main/assets/avatar.png" alt="User Avatar" class="user-avatar">
-                </div>
-            </header>
+                </header>
 
             <div class="content-body">
                 <div class="rka-composer-grid">
                     <div class="rka-structure-panel">
-                        <div class="panel-header">
-                            <h4>Struktur Program & Kegiatan</h4>
-                            <button id="tambah-program-btn" class="btn btn-outline">
-                                <i class="fas fa-plus"></i> Tambah Program
-                            </button>
-                        </div>
                         <ul class="tree-view" id="program-tree-view">
                             <li class="program"><span>Memuat program...</span></li>
                         </ul>
                     </div>
                     <div class="rka-detail-panel">
-                        <h4>Detail Rincian Belanja - Sub Kegiatan 1.1.2</h4>
-                        <div class="rka-detail-table">
-                            <div class="rka-detail-header">
-                                <span>Kode Rekening</span>
-                                <span>Uraian</span>
-                                <span class="text-right">Volume</span>
-                                <span class="text-right">Jumlah Total</span>
-                            </div>
-                            <div class="rka-detail-row">
-                                <span>5.2.1.01.01</span>
-                                <span>Upah Pekerja Harian</span>
-                                <span class="text-right">150 Org-Hari</span>
-                                <span class="text-right">7.500.000</span>
-                            </div>
-                             <div class="rka-detail-row">
-                                <span>-</span>
-                                <span>Bahan Baku Aspal Hotmix</span>
-                                <span class="text-right">20 Ton</span>
-                                <span class="text-right">30.000.000</span>
-                            </div>
-                            <div class="rka-detail-row active">
-                                <span>-</span>
-                                <span>Sewa Alat Berat (Loader)</span>
-                                <span class="text-right">1 Ls</span>
-                                <span class="text-right">5.000.000</span>
-                            </div>
+                        <h4 id="detail-title">Detail Rincian Belanja</h4>
+                        <div class="rka-detail-table" id="detail-table-content">
+                            <p>Pilih sebuah program dari daftar di sebelah kiri untuk melihat detailnya.</p>
                         </div>
-                         <div class="rka-actions">
-                            <span class="status-badge">Status: Draft</span>
-                            <div>
-                                <button class="btn btn-secondary">Simpan Draft</button>
-                                <button class="btn btn-primary">Ajukan Persetujuan</button>
+                         <div class="rka-actions" id="detail-actions">
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
