--- a/penyusunan-rka.html
+++ b/penyusunan-rka.html
@@ -11,15 +11,46 @@
 <body>
     <div class="app-container">
         <aside class="sidebar">
-            </aside>
+            <div class="sidebar-header">
+                <i class="fas fa-cubes"></i>
+                <span>Nexus Anggaran</span>
+            </div>
+            <nav class="sidebar-nav">
+                <ul>
+                    <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
+                    <li class="active"><a href="penyusunan-rka.html"><i class="fas fa-file-alt"></i> Penyusunan RKA</a></li>
+                    <li><a href="alur-persetujuan.html"><i class="fas fa-sitemap"></i> Alur Persetujuan</a></li>
+                    <li><a href="monitoring-realisasi.html"><i class="fas fa-chart-line"></i> Monitoring & Realisasi</a></li>
+                    <li><a href="pelaporan.html"><i class="fas fa-print"></i> Pelaporan</a></li>
+                </ul>
+            </nav>
+            <div class="sidebar-footer">
+                <a href="pengaturan.html"><i class="fas fa-cog"></i> Pengaturan</a>
+                <button id="logout-button"><i class="fas fa-sign-out-alt"></i> Logout</button>
+            </div>
+        </aside>
 
         <main class="main-content">
             <header class="main-header">
-                </header>
+                 <div class="header-title">
+                    <h2>Penyusunan RKA</h2>
+                    <p>Input dan kelola rincian belanja program & kegiatan.</p>
+                </div>
+                <div class="header-user">
+                    <i class="fas fa-bell"></i>
+                    <img src="https://raw.githubusercontent.com/awayedogawa/Nexus-Anggaran/main/assets/avatar.png" alt="User Avatar" class="user-avatar">
+                </div>
+            </header>
 
             <div class="content-body">
                 <div class="rka-composer-grid">
                     <div class="rka-structure-panel">
+                        <div class="panel-header">
+                            <h4>Struktur Program & Kegiatan</h4>
+                            <button id="tambah-program-btn" class="btn btn-outline">
+                                <i class="fas fa-plus"></i> Tambah Program
+                            </button>
+                        </div>
                         <ul class="tree-view" id="program-tree-view">
                             <li class="program"><span>Memuat program...</span></li>
                         </ul>
