--- a/penyusunan-rka.html
+++ b/penyusunan-rka.html
@@ -32,13 +32,16 @@
 
         <main class="main-content">
             <header class="main-header">
-                 <div class="header-title">
+                <div class="header-title">
                     <h2>Penyusunan RKA</h2>
                     <p>Input dan kelola rincian belanja program & kegiatan.</p>
                 </div>
-                <div class="header-user">
-                    <i class="fas fa-bell"></i>
-                    <img src="https://raw.githubusercontent.com/awayedogawa/Nexus-Anggaran/main/assets/avatar.png" alt="User Avatar" class="user-avatar">
+                <div class="header-extra">
+                    <div class="header-user">
+                        <i class="fas fa-bell"></i>
+                        <img src="https://raw.githubusercontent.com/awayedogawa/Nexus-Anggaran/main/assets/avatar.png" alt="User Avatar" class="user-avatar">
+                    </div>
+                    <img src="https://tanbu.go.id/uploads/2020/07/20120111_logo-tanbu.png" alt="Logo Pemda" class="header-logo">
                 </div>
             </header>
 
